health/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcheck
spec:
  selector:
    app: healthcheck
  ports:
    - name: http
      port: 80
      targetPort: 5678
  type: ClusterIP
